@@ -18,6 +18,7 @@
         <java.version>17</java.version>
         <javafx.version>17.0.2</javafx.version>
         <packaging>jar</packaging>
+        <exec.mainClass>com.redmondsims.gistfx.Main</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -124,7 +125,7 @@
                     <launcher>gistfx</launcher>
                     <jlinkImageName>gistfx</jlinkImageName>
                     <jlinkZipName>gistfxzip</jlinkZipName>
-                    <mainClass>com.redmondsims.gistfx/com.redmondsims.gistfx.Main</mainClass>
+                    <mainClass>com.redmondsims.gistfx/${exec.mainClass}</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -138,7 +139,7 @@
                             <launcher>gistfx</launcher>
                             <jlinkImageName>gistfx</jlinkImageName>
                             <jlinkZipName>gistfxzip</jlinkZipName>
-                            <mainClass>com.redmondsims.gistfx/com.redmondsims.gistfx.Main</mainClass>
+                            <mainClass>com.redmondsims.gistfx/${exec.mainClass}</mainClass>
                         </configuration>
                     </execution>
                 </executions>
@@ -150,13 +151,46 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>com.redmondsims.gistfx.Main</Main-Class>
+                            <Main-Class>${exec.mainClass}</Main-Class>
                             <Automatic-Module-Name>com.redmondsims.gistfx</Automatic-Module-Name>
-                            <Program-Version>${version}</Program-Version>
-                            <Implementation-Version>${version}</Implementation-Version>
+                            <Program-Version>${project.version}</Program-Version>
+                            <Implementation-Version>${project.version}</Implementation-Version>
                         </manifestEntries>
                     </archive>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.6.5</version>
+                <configuration>
+                    <mainClass>${exec.mainClass}</mainClass>
+                    <bundleJre>true</bundleJre>
+                    <customizedJre>false</customizedJre>
+                    <generateInstaller>true</generateInstaller>
+                    <administratorRequired>false</administratorRequired>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>package-for-windows</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <platform>windows</platform>
+                            <createZipball>false</createZipball>
+                            <vmArgs>
+                                <vmArg>--module-path=libs</vmArg>
+                                <vmArg>--add-modules=javafx.controls,javafx.graphics</vmArg>
+                            </vmArgs>
+                            <winConfig>
+                                <headerType>console</headerType>
+                                <generateMsi>false</generateMsi>
+                            </winConfig>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
